--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -363,15 +363,6 @@
                     <i class="fas fa-newspaper"></i>
                     News
                 </a>
-                <a href="education.html" class="nav-item">
-                    <i class="fas fa-graduation-cap"></i>
-                    Education
-                </a>
-                <a href="job.html" class="nav-item">
-                    <i class="fas fa-briefcase"></i>
-                    Jobs
-                    <span class="nav-badge">5</span>
-                </a>
                 <a href="goverment-services.html" class="nav-item">
                     <i class="fas fa-landmark"></i>
                     Government Services
@@ -448,13 +439,13 @@
                         <i class="fas fa-store"></i>
                         Browse Marketplace
                     </a>
-                    <a href="education.html" class="action-btn">
-                        <i class="fas fa-book"></i>
-                        Learning Resources
+                    <a href="goverment-services.html" class="action-btn">
+                        <i class="fas fa-landmark"></i>
+                        Government Services
                     </a>
-                    <a href="job.html" class="action-btn">
-                        <i class="fas fa-briefcase"></i>
-                        Job Opportunities
+                    <a href="chatbot.html" class="action-btn">
+                        <i class="fas fa-robot"></i>
+                        HelpBot Assistance
                     </a>
                 </div>
             </div>
