--- a/public/register.html
+++ b/public/register.html
@@ -33,6 +33,7 @@
         }
 
         .auth-header h1 {
+            color: white;
             margin: 0;
             font-size: 1.8rem;
         }
